Bug 431597 - [LSP][clangd]Incorrect syntax highlight in C post typing out the entire struct.
Summary: [LSP][clangd]Incorrect syntax highlight in C post typing out the entire struct.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: syntax (other bugs)
Version First Reported In: 20.12.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-14 15:06 UTC by jakubby
Modified: 2021-01-31 09:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bug presentation, with an example file with a struct. (561.62 KB, video/mp4)
2021-01-14 15:06 UTC, jakubby
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jakubby 2021-01-14 15:06:34 UTC
Created attachment 134851 [details]
Bug presentation, with an example file with a struct.

SUMMARY
From a user perspective this depends on his typing speed.
The C code might get improperly highlighted.
The issue isn't dependent on the "Highlight range between selected brackets" setting.

STEPS TO REPRODUCE
Write out C structs, the syntax highlight sometimes doesn't follow up with the syntax highlight convention.

OBSERVED RESULT
"};" traces into syntax of a struct type name, user needs to refresh the file for proper syntax highlight.

EXPECTED RESULT
After a short period of inactivity, the structs should get properly highlighted.
(they don't always do)

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
clangd version 11.0.1
Comment 2 Waqar Ahmed 2021-01-31 09:40:46 UTC
Git commit 30c1295901b99c009066569fef9a4a2569fe3eca by Waqar Ahmed.
Committed on 30/01/2021 at 15:45.
Pushed by cullmann into branch 'master'.

Don't expand semantic highlighting ranges to prevent incorrect
highlighting while typing

M  +1    -2    addons/lspclient/lspclientpluginview.cpp

https://invent.kde.org/utilities/kate/commit/30c1295901b99c009066569fef9a4a2569fe3eca