Don't expand semantic highlighting ranges to prevent incorrect highlighting while typing

BUG: 431597